--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1495,7 +1495,7 @@
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
-                                                <a href="./images/ig_01.jpg"></a>
+                                                <img src="./images/ig_01.jpg" alt="">
                                             </div>
                                             <div class="actions">
                                                 <i class="ri-instagram-line"></i>
@@ -1506,7 +1506,7 @@
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
-                                                <a href="./images/ig_05.jpg"></a>
+                                                 <img src="./images/ig_05.jpg" alt="">
                                             </div>
                                             <div class="actions">
                                                 <i class="ri-instagram-line"></i>
@@ -1517,7 +1517,7 @@
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
-                                                <a href="./images/ig_02.jpg"></a>
+                                                 <img src="./images/ig_03.jpg" alt="">
                                             </div>
                                             <div class="actions">
                                                 <i class="ri-instagram-line"></i>
@@ -1528,7 +1528,7 @@
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
-                                                <a href="./images/ig_03.jpg"></a>
+                                                 <img src="./images/ig_04.jpg" alt="">
                                             </div>
                                             <div class="actions">
                                                 <i class="ri-instagram-line"></i>
@@ -1539,7 +1539,7 @@
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
-                                                <a href="./images/ig_04.jpg"></a>
+                                                 <img src="./images/ig_02.jpg" alt="">
                                             </div>
                                             <div class="actions">
                                                 <i class="ri-instagram-line"></i>
