--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home Page</title>
-  <script src="./javascripts/script.js"></script>
+  <script src="../javascripts/script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -17,7 +17,7 @@
 
 <body>
   {{{body}}}
-    <script src="./javascripts/script.js"></script>
+    <script src="../javascripts/script.js"></script>
 </body>
 
 </html>
