--- a/views/product/product_page.hbs
+++ b/views/product/product_page.hbs
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page</title>
-    <link rel="stylesheet" href="./javascripts/script.js"/>
+    <title>Home Page</title>
+    <link rel="stylesheet" href="./script.js">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap">
     <link href="https://fonts.cdnfonts.com/css/prata-2">
-    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -262,16 +262,55 @@
                             <div class="wrapper">
                                 <div class="image">
                                     <div class="outer-main">
-                                        <div class="main-image">
-                                            <div class="item"><img src="./images/product_01.jpg" alt=""></div>
+                                        <div class="main-image swiper">
+                                            <div class="wrap swiper-wrapper">
+                                                <div class="item swiper-slide"><img src="./images/product_01.jpg"
+                                                        alt=""></div>
+                                                <div class="item swiper-slide"><img src="./images/product_01b.jpg"
+                                                        alt=""></div>
+                                                <div class="item swiper-slide"><img src="./images/product_05b.jpg"
+                                                        alt=""></div>
+                                                <div class="item swiper-slide"><img src="./images/product_05b.jpg"
+                                                        alt=""></div>
+                                                <div class="item swiper-slide"><img src="./images/product_06b.jpg"
+                                                        alt=""></div>
+                                                <div class="item swiper-slide"><img src="./images/product_06b.jpg"
+                                                        alt=""></div>
+                                            </div>
+                                        </div>
+                                        <div class="custom-pagination">
+                                            <div class="swiper-pagination"></div>
                                         </div>
                                     </div>
                                     <div class="outer-thumb ob-cover">
-                                        <div class="thumbnail-image">
-                                            <div class="wrap">
-                                                <div class="item">
-                                                    <div class="thump-wrap"><img src="" alt="./images/product_01.jpg"></div>
+                                        <div class="thumbnail-image swiper">
+                                            <div class="wrap swiper-wrapper">
+                                                <div class="item swiper-slide">
+                                                    <div class="thumb-wrap"><img src="./images/product_01.jpg" alt="">
+                                                    </div>
                                                 </div>
+                                                <div class="item swiper-slide">
+                                                    <div class="thumb-wrap"><img src="./images/product_01b.jpg" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="item swiper-slide">
+                                                    <div class="thumb-wrap"><img src="./images/product_05.jpg" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="item swiper-slide">
+                                                    <div class="thumb-wrap"><img src="./images/product_05b.jpg" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="item swiper-slide">
+                                                    <div class="thumb-wrap"><img src="./images/product_06.jpg" alt="">
+                                                    </div>
+                                                </div>
+                                                <div class="item swiper-slide">
+                                                    <div class="thumb-wrap"><img src="./images/product_06b.jpg" alt="">
+                                                    </div>
+                                                </div>
+
+
                                             </div>
                                         </div>
                                     </div>
@@ -420,7 +459,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 
 </body>
 
