--- a/views/product/product_page.hbs
+++ b/views/product/product_page.hbs
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <link rel="stylesheet" href="./script.js">
+    <title>Product Page</title>
+    <link rel="stylesheet" href="./javascripts/script.js">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap">
     <link href="https://fonts.cdnfonts.com/css/prata-2">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 
 <body>
@@ -459,7 +459,7 @@
             </div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./javascripts/script.js"></script>
 
 </body>
 
