--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -1,4 +1,4 @@
-<div id="page" class="page-home">
+ <div id="page" class="page-home">
         <header>
             <div class="inner-header">
                 <div class="container wide">
@@ -60,10 +60,11 @@
                                                                         <div class="dot-info">
                                                                             <h2 class="dot-title"><a href="">The Sweater
                                                                                     in Tosca</a></h2>
-                                                                            <div class="product-price"></div>
-                                                                            <span class="before">$80</span>
-                                                                            <span class="before"></span>
-                                                                            <span class="before"></span>
+                                                                            <div class="product-price">
+                                                                                <span class="before">$80.00</span>
+                                                                                <span class="current">$45.00</span>
+                                                                            </div>
+                                                                            
 
 
                                                                         </div>
@@ -95,12 +96,10 @@
                                                                             <div class="label"><span>-25%</span></div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">The Sweater
-                                                                                    in Tosca</a></h2>
-                                                                            <div class="product-price"></div>
-                                                                            <span class="before">$80</span>
-                                                                            <span class="before"></span>
-                                                                            <span class="before"></span>
+                                                                            <div class="product-price">
+                                                                                <span class="before">$80.00</span>
+                                                                                <span class="current">$45.00</span>
+                                                                            </div>
 
 
                                                                         </div>
@@ -132,14 +131,10 @@
                                                                             <div class="label"><span>-25%</span></div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">The Sweater
-                                                                                    in Tosca</a></h2>
-                                                                            <div class="product-price"></div>
-                                                                            <span class="before">$80</span>
-                                                                            <span class="before"></span>
-                                                                            <span class="before"></span>
-
-
+                                                                            <div class="product-price">
+                                                                                <span class="before">$80.00</span>
+                                                                                <span class="current">$45.00</span>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -1703,3 +1698,4 @@
             </div>
         </div>
     </div>
+    <script src="./javascripts/script.js"></script>
