--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1263,10 +1263,461 @@ main>div .heading {
 
 }
 
+.product .custom-pagination {
+  position: relative;
+  height: 50px;
+}
+
+/* ----------------------------- *
+ 
+          #Product sumary
+ 
+ * ----------------------------- */
+
+.sumary .entry {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.sumary .product-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sumary .product-price {
+  display: flex;
+  align-items: center;
+}
+
+.sumary .product-price .current {
+  font-size: 30px;
+}
+
+.sumary .product-price .wrap {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-left: 30px;
+}
+
+.sumary .product-price .wrap::before,
+.product .head-review span::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 12px;
+  height: 100%;
+  width: 1px;
+  background-color: var(--grey-color);
+  transform: skewX(-25deg);
+}
+
+.sumary .product-price .discount {
+  display: inline-block;
+  width: 44px;
+  font-size: var(--fs14);
+  padding: 5px;
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  margin-left: -10px;
+  text-align: center;
+  border-radius: 5px;
+  line-height: 1;
+}
+
+.sumary .product-rating {
+  line-height: initial;
+  text-align: right;
+}
+
+.sumary .product-rating a {
+  font-size: var(--fs14);
+  padding-left: 10px;
+  color: var(--grey-color);
+  text-decoration: dotted;
+  text-decoration-line: underline;
+  white-space: nowrap;
+  transition: var(--transition-color);
+}
+
+.sumary .product-rating a:hover {
+  color: var(--dark-color);
+}
+
+.sumary .wrap:has(button) {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.sumary button {
+  border-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  cursor: pointer;
+}
+
+.sumary .wrap>button,
+.sumary .qty button {
+  width: 40px;
+  height: 40px;
+  transition: box-shadow .3s,
+    var(--transition-border),
+    var(--transition-background),
+    var(--transition-color);
+}
+
+.sumary .product-color button {
+  border-radius: 50%;
+}
+
+.sumary .product-color button.white {
+  background-color: #f0f9f8;
+}
+
+.sumary .product-color button.black {
+  background-color: #212121;
+}
+
+.sumary .product-color button.brown {
+  background-color: #966548;
+}
+
+.sumary .product-color button.selected,
+.sumary .product-color button:hover:not(.selected) {
+  box-shadow: inset 0 0 0 4px var(--white-color);
+}
+
+.sumary .product-size button {
+  font-size: var(--fs14);
+  line-height: 44px;
+  border: 1px solid var(--light-color);
+  border-radius: 5px;
+  background-color: transparent;
+}
+
+
+.sumary .product-price button.selected {
+  background-color: var(--dark-color);
+  color: var(--white-color);
+  border-color: var(--dark-color);
+}
+
+
+.sumary .product-size button:hover:not(.selected, [disabled]) {
+  border-color: var(--dark-color);
+}
+
+
+.sumary .product-size button:disabled {
+  pointer-events: none;
+}
+
+.sumary .product-stock .wrap,
+.sumary .product-control a {
+  display: flex;
+  gap: 5px;
+}
+
+.sumary .product-stock .wrap {
+  color: var(--primary-color);
+  padding-left: 10px;
+}
+
+.sumary .qty {
+  display: flex;
+  font-size: 18px;
+  min-width: 110px;
+  height: 50px;
+  margin: 0 20px 20px 0;
+  background-color: var(--flashwhite-color);
+}
+
+.sumary .qty input {
+  text-align: center;
+  border: 0;
+  outline: 0;
+  background-color: transparent;
+}
+
+.sumary .qty button {
+  font-size: 22px;
+  height: 100%;
+  background-color: transparent;
+}
+
+.sumary .qty button:hover {
+  color: var(--grey-color);
+}
+
+.sumary .product-action {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.sumary .product-action .buynow {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.sumary .product-action :where(.addcart, .buynow) button {
+  width: 100%;
+  height: 50px;
+  border-color: var(--dark-color);
+  padding: 0;
+}
+
+.sumary .product-action .addcart button {
+  background-color: var(--white-color);
+}
+
+.sumary .product-action .addcart button:hover {
+  background-color: var(--dark-color);
+}
+
+.sumary .product-control ul {
+  align-items: flex-start;
+  flex-flow: wrap;
+  gap: 20px;
+}
+
+.sumary .product-control span {
+  font-size: var(--fs14);
+}
+
+.sumary .product-control a {
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0;
+}
+
+.sumary .product-control ul li:first-child a:hover i {
+  color: var(--red-color);
+}
+
+.product .sumary .shipping {
+  padding-top: 30px;
+  border-top: 1px solid var(--flashwhite-color);
+}
+
+.product .sumary .shipping li {
+  position: relative;
+  padding-left: 35px;
+  margin-top: 10px;
+  line-height: 1.5;
+}
+
+.product .sumary .shipping li i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 24px;
+  line-height: 1;
+}
+
+
+/* ----------------------------- *
+ 
+          #Product description
+ 
+ * ----------------------------- */
+
+.product.detail {
+  padding-top: 30px;
+  margin: 70px 0;
+}
+
+.product nav {
+  position: relative;
+}
+
+.product nav::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 58px;
+  height: 2px;
+  width: 100%;
+  background-color: var(--light-color);
+}
+
+.product nav ul li a {
+  position: relative;
+  display: block;
+  font-size: 18px;
+  padding: 20px 0;
+  margin-right: 30px;
+  white-space: nowrap;
+  color: var(--grey-color);
+}
+
+.product nav ul :is(li.active a, li a:hover) {
+  color: var(--dark-color);
+}
+
+.product nav ul li a::before {
+  content: '';
+  position: absolute;
+  height: 2px;
+  width: 0;
+  left: 0;
+  bottom: -2px;
+  background-color: var(--dark-color);
+  transition: width .3s;
+}
+
+.product nav ul li.active a::before {
+  width: 100%;
+}
+
+.product nav .item-floating {
+  right: -18px;
+  top: 0;
+  background-color: var(--dark-color);
+}
+
+.product .product-about {
+  padding: 50px 0;
+  max-width: 980px;
+  margin: 0 auto;
+  display: none;
+  animation: var(--fade);
+}
+
+.product .product-about.active {
+  display: block;
+}
+
+.product .product-about .text-block {
+  padding-bottom: 30px;
+}
+
+.product .product-about :where(h3, h4) {
+  font-family: var(--primary-color);
+  margin-bottom: 15px;
+}
+
+.product .product-about h3 {
+  font-size: 22px;
+}
+
+.product .product-about h4 {
+  font-weight: var(--fw600);
+}
+
+.product .product-about ul {
+  margin-left: 20px;
+  list-style-type: disc;
+}
+
+.product .detail .dotgrid .wrapper {
+  --grid-col: 250px;
+  --gutter: 30px;
+}
+
+
+.product .product-about.custom h3 {
+  font-size: 50px;
+  font-weight: var(--fw600);
+  text-align: center;
+  color: var(--light-color);
+}
+
+
+.product .review {
+  max-width: 770px;
+}
+
+.product .review .head-review {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 30px;
+  border-bottom: 1px solid var(--light-color);
+}
+
+.product .review .head-review strong {
+  font-size: 50px;
+}
+
+.product .review .head-review span {
+  position: relative;
+  padding-left: 20px;
+}
+
+.product .head-review span::before {
+  height: 50px;
+  top: -30px;
+}
+
+.product .head-review .primary-btn {
+  border-width: 1px;
+  text-transform: unset;
+  font-weight: 500;
+}
+
+.product .profile .thumb-name {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.product .profile .image {
+  width: 72px;
+  height: 72px;
+  border-radius: 50%;
+  margin-right: 20px;
+  overflow: hidden;
+}
+
+.product .profile .grouping {
+  line-height: initial;
+}
+
+.product .profile .name {
+  font-weight: var(--fw600);
+  margin-bottom: 5px;
+}
+
+.product .profile .date {
+  font-size: 12px;
+  margin-top: 8px;
+}
+
+.review .profile {
+  padding-bottom: 40px;
+}
 
 
 
-@media(min-width: 550px) {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media(min-width: 500px) {
   .product .wrapper {
     --gutter: 60px;
   }
@@ -1291,6 +1742,17 @@ main>div .heading {
     top: 0;
     left: 20px;
   }
+
+  .custom-pagination {
+    display: none;
+  }
+
+  .product .profile .comment {
+    padding-left: 92px;
+  }
+
+
+
 }
 
 
@@ -1302,6 +1764,17 @@ main>div .heading {
 @media(min-width: 768px) {
   .banner {
     background-size: contain;
+  }
+
+  .product.dotgrid .image {
+    max-width: 100%;
+    margin: 0;
+    position: sticky;
+    top: 30px;
+  }
+
+  .product nav ul {
+    justify-content: center;
   }
 }
 
@@ -1443,5 +1916,21 @@ main>div .heading {
 
   .carousel .nav>.swiper-button-prev {
     left: -40px;
+  }
+
+  .product .outer-main {
+    width: 100%;
+    margin: 0;
+  }
+
+  .product .image .outer-thumb {
+    position: absolute;
+    top: 0;
+    left: -100px;
+    height: 100%;
+  }
+
+  .product.dotgrid .image {
+    overflow: unset;
   }
 }
