--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -1,3 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="./javascripts/script.js">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap">
+    <link href="https://fonts.cdnfonts.com/css/prata-2">
+    <link rel="stylesheet" href="./stylesheets/style.css">
+</head>
+
+<body>
     <div id="page" class="page-single">
         <header>
             <div class="inner-header">
@@ -297,12 +315,216 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="summary">
+                                <div class="sumary">
+                                    <div class="entry">
+                                        <h1 class="title">The Sneaker in VietNam</h1>
+                                        <div class="product-group">
+                                            <div class="product-price">
+                                                <span class="current">$30.00</span>
+                                                <div class="wrap">
+                                                    <span class="before">$60.00</span>
+                                                    <span class="discount">-50%</span>
+                                                </div>
+                                            </div>
+                                            <div class="product-rating">
+                                                <span>
+                                                    <i class="ri-star-fill"></i>
+                                                    <span>4.5</span>
+                                                </span>
+                                                <a href=""> 10 Reviews</a>
+                                            </div>
+                                        </div>
+                                        <div class="product-color">
+                                            <span>Colors:</span>
+                                            <div class="wrap">
+                                                <button class="white selected"></button>
+                                                <button class="black"></button>
+                                                <button class="brown"></button>
+                                            </div>
+                                        </div>
+                                        <div class="product-size">
+                                            <span>Sizes:</span>
+                                            <div class="wrap">
+                                                <button disabled>S</button>
+                                                <button>M</button>
+                                                <button class="selected">L</button>
+                                                <button>XL</button>
+                                            </div>
+                                        </div>
+                                        <div class="product-stock">
+                                            <div class="wrap">
+                                                <strong>100</strong>
+                                                <span class="grey-color">in stock</span>
+                                                <i class="ri-checkbox-circle-line"></i>
+                                            </div>
+                                        </div>
+                                        <div class="product-action">
+                                            <div class="qty">
+                                                <button class="decrease">-</button>
+                                                <input type="text" value="1">
+                                                <button class="iecrease">+</button>
+                                            </div>
+                                            <div class="addcart button">
+                                                <button type="submit" class="primary-btn">Add to cart</button>
+                                            </div>
+                                            <div class="buynow button">
+                                                <button type="submit" class="secondary-btn">Buy Now</button>
+                                            </div>
+                                        </div>
+                                        <div class="product-control list-inline">
+                                            <ul>
+                                                <li><a href=""><i class="ri-heart-line"></i><span>Add to
+                                                            wishlist</span></a></li>
+                                                <li><a href=""><i
+                                                            class="ri-arrow-left-right-line"></i><span>Compare</span></a>
+                                                </li>
+                                                <li><a href=""><i
+                                                            class="ri-share-forward-line"></i><span>Share</span></a>
+                                                </li>
+                                                <li><a href=""><i class="ri-question-line"></i><span>Ask
+                                                            question</span></a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="shipping">
+                                            <ul>
+                                                <li>
+                                                    <i class="ri-gift-line"></i>
+                                                    <span>Free shipping & return</span>
+                                                    <span class="grey-color">On orders over $100</span>
+                                                </li>
+                                                <li>
+                                                    <i class="ri-truck-line"></i>
+                                                    <span>Estimate delivery</span>
+                                                    <span class="grey-color">24-26 Nov,2023</span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
 
                                 </div>
                             </div>
                         </div>
-                        <div class="product detail"></div>
+                        <div class="product detail">
+                            <div class="wrapper tabbed">
+                                <nav class="list-inline scrollto">
+                                    <ul class="wrapper">
+                                        <li class="active"><a href="#0" class="tabbed-trigger" data-id="product-description"><span>Product details</span></a></li>
+                                        <li><a href="#0" class="tabbed-trigger" data-id="product-custom"><span>Custom</span></a></li>
+                                        <li><a href="#0" class="tabbed-trigger" data-id="product-review"><span>Reviews</span><span class="item-floating">10</span></a></li>
+                                        <li><a href="#0" class="tabbed-trigger" data-id="product-shipping"><span>Shipping</span></a></li>
+                                    </ul>
+                                </nav>
+                                <div id="product-description" class="product-about description active">
+                                    <div class="text-block">
+                                        <h3>The Sneaker in VietNam</h3>
+                                        <div class="grey-color">
+                                            <p>A waterproof GORE-TEX upper helps your feet stay dry whether you're
+                                                jogging down a rainy road or splashing through muddy trails. A flexible
+                                                cuff around the ankle provides comfort and helps keep debris out.</p>
+                                            <p>Level up your fits with pieces rooted in Jordan heritage. From everyday
+                                                fleece essentials in subtle washed colors to classic outerwear
+                                                silhouettes and utilitarian pants, these staples are timelessly cool.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="dotgrid">
+                                        <div class="wrapper">
+                                            <div class="list-block">
+                                                <h4>What is this?</h4>
+                                                <ul class="grey">
+                                                    <li>Shopping As It Should Be</li>
+                                                    <li>Shopping As It Should Be</li>
+                                                    <li>Shopping As It Should Be</li>
+                                                    <li>Shopping As It Should Be</li>
+                                                </ul>
+                                            </div>
+                                            <div class="list-block">
+                                                <h4>What makes our products unique?</h4>
+                                                <p class="grey">When you’re with us, you’re part of something bigger: a
+                                                    global community dedicated to bringing out the best in one
+                                                    another, with access to the most effective tools for the job,
+                                                    including Member-exclusive products, Nike By You
+                                                    customisation, and special offers. And it's all free.</p>
+                                            </div>
+                                            <div class="list-block">
+                                                <h4>What makes our products unique?</h4>
+                                                <p class="grey">Nike Membership gives you access to inspiration, community and exclusive Nike products. It's the best way to access everything Nike, and it's free, fast and easy to join. You can join online or when you download any of the Nike apps.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="product-custom" class="product-about custom">
+                                    <h3>Our custom size</h3>
+                                    <div class="image">
+                                        <img src="./images/custom-size.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div id="product-review" class="product-about review">
+                                    <div class="wrapper">
+                                        <h3>Rating & Review</h3>
+                                        <div class="head-review">
+                                            <div class="sum-rating">
+                                                <strong>4.8</strong>
+                                                <span>10 Review</span>
+                                            </div>
+                                            <div class="button">
+                                                <a href="" class="primary-btn">Write a Review</a>
+                                            </div>
+                                        </div>
+                                        <div class="body-review">
+                                            <div class="profile">
+                                                <div class="thumb-name">
+                                                    <div class="image">
+                                                        <img src="./images/ig_01.jpg" alt="">
+                                                    </div>
+                                                    <div class="grouping">
+                                                        <div class="name">Bach</div>
+                                                        <div class="rating">
+                                                            <i class="ri-star-fill"></i>
+                                                            <i class="ri-star-fill"></i>
+                                                            <i class="ri-star-fill"></i>
+                                                            <i class="ri-star-fill"></i>
+                                                            <i class="ri-star-fill"></i>
+                                                        </div>
+                                                        <div class="date grey-color">20/11/2023</div>
+                                                    </div>
+                                                </div>
+                                                <div class="comment">
+                                                    <strong>Awesome Product</strong>
+                                                    <p class="grey-color">All Nike Members receive special offers and product promotions just to say thanks for being with us, or for moments of personal significance like birthdays. Nike Member Rewards is not a points-based system, so you'll receive rewards throughout the year.</p>
+                                                </div>
+                                            </div>
+                                            <div class="profile">
+                                                <div class="thumb-name">
+                                                    <div class="image">
+                                                        <img src="./images/ig_02.jpg" alt="">
+                                                    </div>
+                                                    <div class="grouping">
+                                                        <div class="name">Bach</div>
+                                                        <div class="rating">
+                                                            <i class="ri-star-fill"></i>
+                                                            <i class="ri-star-fill"></i>
+                                                            <i class="ri-star-fill"></i>
+                                                        </div>
+                                                        <div class="date grey-color">20/11/2023</div>
+                                                    </div>
+                                                </div>
+                                                <div class="comment">
+                                                    <strong>Awesome Product</strong>
+                                                    <p class="grey-color">All Nike Members receive special offers and product promotions just to say thanks for being with us, or for moments of personal significance like birthdays. Nike Member Rewards is not a points-based system, so you'll receive rewards throughout the year.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="product-shipping" class="product-about shipping">
+                                    <div class="grey-color">
+                                        <p>Join Us with three simple clicks, and you'll be ready to shop, work out and enjoy all of our benefits.</p>
+                                        <p>Join Us with three simple clicks, and you'll be ready to shop, work out and enjoy all of our benefits.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -442,3 +664,6 @@
         </div>
     </div>
     <script src="./javascripts/script.js"></script>
+</body>
+
+</html>
