--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap">
     <link href="https://fonts.cdnfonts.com/css/prata-2">
-    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="./stylesheets/product.css">
 </head>
 
 <body>
