--- a/views/login/login.hbs
+++ b/views/login/login.hbs
@@ -26,7 +26,7 @@
                 <div class="signup">
                     <nav>
                         <ul>
-                            <li><a href="#0"><i class="ri-arrow-left-line"></i></a></li>
+                            <li><a href="/"><i class="ri-arrow-left-line"></i></a></li>
                             <li>Already member?<a href="#0" class="t-signin">Sign in</a></li>
                         </ul>
                     </nav>
@@ -34,23 +34,23 @@
                         <h2>Sign Up</h2>
                         <p>We secure your data privacy encrypted.</p>
                     </div>
-                    <form action="">
+                    <form action="/signup" method="POST">
                         <p>
                             <i class="ri-user-3-line"></i>
-                            <input type="text" placeholder="Full name">
+                            <input type="text" name="username" placeholder="User name">
                         </p>
                         <p>
                             <i class="ri-mail-line"></i>
-                            <input type="email" placeholder="Your email address">
+                            <input type="email" name="email" placeholder="Your email address">
                         </p>
                         <p>
                             <i class="ri-lock-line"></i>
                             <i class="ri-eye-off-line"></i>
-                            <input type="password" placeholder="Enter password">
+                            <input type="password" name="password" placeholder="Enter password">
                         </p>
                         <p>
                             <i class="ri-lock-line"></i>
-                            <input type="password" placeholder="Re-Enter password">
+                            <input type="password" name="re_password" placeholder="Re-Enter password">
                         </p>
                         <div class="actions">
                             <label>
@@ -69,7 +69,7 @@
                 <div class="signin">
                     <nav>
                         <ul>
-                            <li><a href="#0"><i class="ri-arrow-left-line"></i></a></li>
+                            <li><a href="/"><i class="ri-arrow-left-line"></i></a></li>
                             <li>Don't have an account?<a href="#0" class="t-signup">Sign up</a></li>
                         </ul>
                     </nav>
@@ -77,14 +77,14 @@
                         <h2>Sign In</h2>
                         <p>We secure your data privacy encrypted.</p>
                     </div>
-                    <form action="">
+                    <form action="/signin" method="POST">
                         <p>
-                            <i class="ri-mail-line"></i>
-                            <input type="email" placeholder="Your email address">
+                            <i class="ri-user-3-line"></i>
+                            <input type="text" name="username" placeholder="User name">
                         </p>
                         <p>
                             <i class="ri-lock-line"></i>
-                            <input type="password" placeholder="Enter password">
+                            <input type="password" name="password" placeholder="Enter password">
                         </p>
                         <div class="actions">
                             <label>
