--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -215,6 +215,7 @@
                                         </ul>
                                     </li>
                                     <li><a href=""><span>Sale</span></a></li>
+                                    <li><a href=""><span>Contacts</span></a></li>
                                 </ul>
                             </nav>
                             <div class="branding"><a href="">Shopping</a></div>
