--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -188,7 +188,7 @@
                                     </ul>
                                 </li>
                                 <li><a href=""><span>Sale</span></a></li>
-                                <li><a href=""><span>Contacts</span></a></li>
+                                <li><a href="contact.hbs"><span>Contacts</span></a></li>
                             </ul>
                         </nav>
                         <div class="branding"><a href="">Shopping</a></div>
