--- a/views/contact/contact.hbs
+++ b/views/contact/contact.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> CONTACT US - Sagar Tomar</title>
+    <title> CONTACT-US</title>
     <link rel="stylesheet" href="./stylesheets/contact.css">
 </head>
 <div class="container">
