--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -538,6 +538,7 @@
                                                 </h3>
                                             </div>
                                         </div>
+                                        {{/each}}
                                     </div>
                                 </div>
                                 <div class="button">
