Debug view home to db

--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -226,11 +226,11 @@
             <div class="sliderbox swiper">
                 <div class="wrap swiper-wrapper">
                      <!--3 lần-->
-                    {{#each home}}
+                    {{#each productList}}
                     <div class="item swiper-slide">
                         <div class="image">
                             <div class="ob-cover">
-                                <img src="{{this.image}}" alt="">
+                                <img src="{{this.gallery}}" alt="">
                             </div>
                             <div class="title-info">
                                 <div class="container wide">
@@ -260,11 +260,11 @@
                     </div>
                     <div class="dotgrid scrollto">
                         <div class="wrapper">
-                            {{#each home}}
+                            {{#each productList}}
                             <div class="item">
                                 <div class="dot-image">
                                     <div class="thumbnail hover">
-                                        <img src="{{this.image}}" alt="">
+                                        <img src="{{this.gallery}}" alt="">
                                     </div>
                                 </div>
                                 <div class="dot-info">
@@ -290,15 +290,15 @@
                             <!--Carousel-->
                             <!--12 lấn-->
                             <div class="wrapper swiper-wrapper">
-                                {{#each home}}
+                                {{#each productList}}
                                 <div class="item swiper-slide">
                                     <div class="dot-image">
                                         <a href="" class="product-permalink"></a>
                                         <div class="thumbnail">
-                                            <img src="{{this.image}}" alt="">
+                                            <img src="{{this.gallery}}" alt="">
                                         </div>
                                         <div class="thumbnail hover">
-                                            <img src="{{this.image}}" alt="">
+                                            <img src="{{this.gallery}}" alt="">
                                         </div>
                                         <div class="actions">
                                             <ul>
@@ -360,15 +360,15 @@
                             <div class="dotgrid">
                                 <div class="wrapper">
                                     <!--7 lần-->
-                                    {{#each home}}
+                                    {{#each productList}}
                                     <div class="item">
                                         <div class="dot-image">
                                             <a href="" class="product-permalink"></a>
                                             <div class="thumbnail">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="thumbnail hover">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="actions">
                                                 <ul>
@@ -427,15 +427,15 @@
                             <div class="dotgrid">
                                 <div class="wrapper">
                                     <!-- 6 lần -->
-                                    {{#each home}}
+                                    {{#each productList}}
                                     <div class="item">
                                         <div class="dot-image">
                                             <a href="" class="product-permalink"></a>
                                             <div class="thumbnail">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="thumbnail hover">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="actions">
                                                 <ul>
@@ -465,15 +465,15 @@
                             <div class="dotgrid">
                                 <div class="wrapper">
                                     <!-- 6 lần-->
-                                    {{#each home}}
+                                    {{#each productList}}
                                     <div class="item">
                                         <div class="dot-image">
                                             <a href="" class="product-permalink"></a>
                                             <div class="thumbnail">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="thumbnail hover">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="actions">
                                                 <ul>
@@ -522,12 +522,12 @@
                                 <div class="dotgrid scrollto">
                                     <div class="wrapper">
                                         <!--3 lần-->
-                                        {{#each home}}
+                                        {{#each productList}}
                                         <div class="item">
                                             <div class="dot-image">
                                                 <div class="thumbnail hover">
                                                     <a href="">
-                                                        <img src="{{this.image}}" alt="">
+                                                        <img src="{{this.gallery}}" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -558,12 +558,12 @@
                             <div class="dotgrid scrollto">
                                 <div class="wrapper">
                                     <!--5 lần-->
-                                    {{#each home}}
+                                    {{#each productList}}
                                     <div class="item">
                                         <div class="dot-image">
                                             <a href=""></a>
                                             <div class="thumbnail">
-                                                <img src="{{this.image}}" alt="">
+                                                <img src="{{this.gallery}}" alt="">
                                             </div>
                                             <div class="actions">
                                                 <i class="ri-instagram-line"></i>
