--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -215,7 +215,6 @@
                                         </ul>
                                     </li>
                                     <li><a href=""><span>Sale</span></a></li>
-                                    <li><a href=""><span>Contacts</span></a></li>
                                 </ul>
                             </nav>
                             <div class="branding"><a href="">Shopping</a></div>
@@ -416,7 +415,8 @@
                                                             <ul>
                                                                 <li><a href=""><i class="ri-star-line"></i></a>
                                                                 </li>
-                                                                <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                                <li><a href=""><i
+                                                                            class="ri-arrow-left-right-line"></i></a>
                                                                 </li>
                                                                 <li><a href=""><i class="ri-eye-line"></i></a>
                                                                 </li>
@@ -446,7 +446,8 @@
                                                             <ul>
                                                                 <li><a href=""><i class="ri-star-line"></i></a>
                                                                 </li>
-                                                                <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                                <li><a href=""><i
+                                                                            class="ri-arrow-left-right-line"></i></a>
                                                                 </li>
                                                                 <li><a href=""><i class="ri-eye-line"></i></a>
                                                                 </li>
@@ -477,7 +478,8 @@
                                                             <ul>
                                                                 <li><a href=""><i class="ri-star-line"></i></a>
                                                                 </li>
-                                                                <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                                <li><a href=""><i
+                                                                            class="ri-arrow-left-right-line"></i></a>
                                                                 </li>
                                                                 <li><a href=""><i class="ri-eye-line"></i></a>
                                                                 </li>
@@ -507,7 +509,8 @@
                                                             <ul>
                                                                 <li><a href=""><i class="ri-star-line"></i></a>
                                                                 </li>
-                                                                <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                                <li><a href=""><i
+                                                                            class="ri-arrow-left-right-line"></i></a>
                                                                 </li>
                                                                 <li><a href=""><i class="ri-eye-line"></i></a>
                                                                 </li>
@@ -537,7 +540,8 @@
                                                             <ul>
                                                                 <li><a href=""><i class="ri-star-line"></i></a>
                                                                 </li>
-                                                                <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                                <li><a href=""><i
+                                                                            class="ri-arrow-left-right-line"></i></a>
                                                                 </li>
                                                                 <li><a href=""><i class="ri-eye-line"></i></a>
                                                                 </li>
@@ -567,7 +571,8 @@
                                                             <ul>
                                                                 <li><a href=""><i class="ri-star-line"></i></a>
                                                                 </li>
-                                                                <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                                <li><a href=""><i
+                                                                            class="ri-arrow-left-right-line"></i></a>
                                                                 </li>
                                                                 <li><a href=""><i class="ri-eye-line"></i></a>
                                                                 </li>
@@ -597,7 +602,8 @@
                                                             <ul>
                                                                 <li><a href=""><i class="ri-star-line"></i></a>
                                                                 </li>
-                                                                <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                                <li><a href=""><i
+                                                                            class="ri-arrow-left-right-line"></i></a>
                                                                 </li>
                                                                 <li><a href=""><i class="ri-eye-line"></i></a>
                                                                 </li>
@@ -627,7 +633,8 @@
                                                             <ul>
                                                                 <li><a href=""><i class="ri-star-line"></i></a>
                                                                 </li>
-                                                                <li><a href=""><i class="ri-arrow-left-right-line"></i></a>
+                                                                <li><a href=""><i
+                                                                            class="ri-arrow-left-right-line"></i></a>
                                                                 </li>
                                                                 <li><a href=""><i class="ri-eye-line"></i></a>
                                                                 </li>
@@ -647,13 +654,13 @@
                                             </div>
                                         </div>
                                     </div>
-                                <div class="button"><a href="" class="primary-btn">Load more</a></div>
+                                    <div class="button"><a href="" class="primary-btn">Load more</a></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            
+
 
 
         </main>
@@ -1034,7 +1041,7 @@
         </div>
     </div>
 
-    <script src="./javascripts/script.js"></script>
+    <script src="./script.js"></script>
 
 </body>
 
